<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/butCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/butSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textColor="@color/color_allsms_title_text"
                android:text="@string/title_template_label"
                />
            <EditText
                android:id="@+id/sms_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:inputType="textCapSentences"
                android:hint="@string/template_title_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textColor="@color/color_allsms_title_text"
                android:text="@string/text_template_label"
                />
            <EditText
                android:id="@+id/sms_text_edit_text"
                android:paddingLeft="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/text_template_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:textColor="@color/color_allsms_title_text"
                    android:text="@string/phone_template_label"
                    />
                <EditText
                    android:id="@+id/phone_number_edit_text"
                    android:paddingLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_template_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_allsms_title_text"
                android:paddingLeft="4dp"
                android:text="@string/text_category_label"
                />
            <Spinner
                android:id="@+id/sms_category_spinner"
                android:layout_width="match_parent"
                android:entries="@array/screen_array"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/sms_is_favorite_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textColor="@color/color_allsms_title_text"
                android:text="@string/favorite_template_label"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>