<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/buttons_category"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/categoryButtonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/categoryButtonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_above="@id/buttons_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textColor="@color/color_allsms_title_text"
                android:text="@string/category_name_label"
                />
            <EditText
                android:id="@+id/category_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:inputType="textCapSentences"
                android:hint="@string/category_name_hint"/>
        </LinearLayout>
        <com.production.kriate.allsmsonetap.view.SlidingTabLayout
            android:id="@+id/category_sliding_tabs"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v4.view.ViewPager
            android:id="@+id/category_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:background="@color/color_allsms_background"/>
    </LinearLayout>
</RelativeLayout>